force-app/main/default/objects/Classification__c/Classification__c.object-meta.xml
<CustomObject>
    <description>HR - Look up table for Classication Descriptions</description>
    <label>Classification</label>
    <nameField>
        <label>Classification Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>