force-app/main/default/objects/Classification__c/fields/Classification_Name__c.field-meta.xml
<CustomField>
    <fullName>Classification_Name__c</fullName>
    <label>Classification Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>