force-app/main/default/objects/Classification__c/fields/Minimum_Salary_Rate__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Salary_Rate__c</fullName>
    <label>Maximum Salary Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>