force-app/main/default/objects/Classification__c/fields/Type_of_Position__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Position__c</fullName>
    <label>Type of Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Civil Service</fullName>
            </value>
            <value>
                <fullName>4 - Exempt</fullName>
            </value>
            <value>
                <fullName>7 - Statutory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>