force-app/main/default/objects/Classification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Classification_Name__c</columns>
    <columns>Minimum_Salary_Rate__c</columns>
    <columns>Salary_Per__c</columns>
    <columns>Type_of_Position__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>